--- a/style.css
+++ b/style.css
@@ -29,3 +29,18 @@ li{
 body {
   background-image: url("blackbackground.jpeg");
 }
+p.a {
+  font-family: "Times New Roman", Times, serif;
+}
+p.a {
+  font-family: "Times New Roman", Times, serif;
+}
+p.a {
+  font-family: "Times New Roman", Times, serif;
+}
+p.a {
+  font-family: "Times New Roman", Times, serif;
+}
+p.a {
+  font-family: "Times New Roman", Times, serif;
+}
