--- a/style.css
+++ b/style.css
@@ -42,5 +42,5 @@ p.a {
   font-family: "Times New Roman", Times, serif;
 }
 p.a {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Fantasy", Times, serif;
 }
